--- a/src/UI/UI.form
+++ b/src/UI/UI.form
@@ -19,14 +19,14 @@
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <scrollpane id="9a447">
+      <scrollpane id="9a447" binding="JScrollPane">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="8" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="a90e3" binding="leftPanel" layout-manager="GridLayoutManager" row-count="13" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="a90e3" binding="leftPanel" layout-manager="GridLayoutManager" row-count="11" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="10" left="10" bottom="10" right="10"/>
             <constraints/>
             <properties>
@@ -50,7 +50,7 @@
               </component>
               <vspacer id="324e3">
                 <constraints>
-                  <grid row="12" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                  <grid row="10" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                 </constraints>
               </vspacer>
               <component id="f4edb" class="javax.swing.JButton" binding="venderButton" default-binding="true">
@@ -97,16 +97,6 @@
                   <text value="Buscar por pais"/>
                 </properties>
               </component>
-              <component id="5b81e" class="javax.swing.JButton" binding="testButton1">
-                <constraints>
-                  <grid row="9" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <focusable value="false"/>
-                  <font name="Consolas" size="18" style="1"/>
-                  <text value="TEST-1"/>
-                </properties>
-              </component>
               <component id="3b701" class="javax.swing.JButton" binding="buscarMayorButton" default-binding="true">
                 <constraints>
                   <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -150,17 +140,6 @@
                   <text value="Listado Alfabético"/>
                 </properties>
               </component>
-              <component id="c0412" class="javax.swing.JButton" binding="testButton2">
-                <constraints>
-                  <grid row="10" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <focusable value="false"/>
-                  <font name="Consolas" size="18" style="1"/>
-                  <label value="TEST-2"/>
-                  <text value="TEST-2"/>
-                </properties>
-              </component>
               <component id="967ca" class="javax.swing.JButton" binding="agregarButton" default-binding="true">
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -173,18 +152,6 @@
                   <horizontalAlignment value="2"/>
                   <icon value="icons8-add-to-collection-64.png"/>
                   <text value="Agregar"/>
-                </properties>
-              </component>
-              <component id="afd1a" class="javax.swing.JButton" binding="showArraybutton">
-                <constraints>
-                  <grid row="11" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <background color="-657931"/>
-                  <focusable value="false"/>
-                  <font name="Consolas" size="18" style="1"/>
-                  <foreground color="-13611010"/>
-                  <text value="Mostrar Arreglo"/>
                 </properties>
               </component>
               <component id="be153" class="javax.swing.JRadioButton" binding="oscuroRadioButton" default-binding="true">
@@ -209,6 +176,49 @@
                   <text value=""/>
                 </properties>
               </component>
+              <grid id="28e06" binding="devOptions" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
+                <constraints>
+                  <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="be0b9" class="javax.swing.JButton" binding="testButton1">
+                    <constraints>
+                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <focusable value="false"/>
+                      <font name="Consolas" size="18" style="1"/>
+                      <text value="TEST-1"/>
+                    </properties>
+                  </component>
+                  <component id="b2220" class="javax.swing.JButton" binding="testButton2">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <focusable value="false"/>
+                      <font name="Consolas" size="18" style="1"/>
+                      <label value="TEST-2"/>
+                      <text value="TEST-2"/>
+                    </properties>
+                  </component>
+                  <component id="dea13" class="javax.swing.JButton" binding="showArraybutton">
+                    <constraints>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <background color="-657931"/>
+                      <focusable value="false"/>
+                      <font name="Consolas" size="18" style="1"/>
+                      <foreground color="-13611010"/>
+                      <text value="Mostrar Arreglo"/>
+                    </properties>
+                  </component>
+                </children>
+              </grid>
             </children>
           </grid>
         </children>
@@ -219,7 +229,7 @@
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1902081"/>
+          <background color="-1"/>
         </properties>
         <border type="none"/>
         <children>
@@ -270,6 +280,7 @@
                 </constraints>
                 <properties>
                   <font name="Consolas" size="14" style="3"/>
+                  <foreground color="-13611010"/>
                   <text value="Gato"/>
                 </properties>
               </component>
@@ -278,7 +289,9 @@
                   <grid row="2" column="3" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-1"/>
                   <font name="Consolas" size="14" style="3"/>
+                  <foreground color="-13611010"/>
                   <text value="Perro"/>
                 </properties>
               </component>
@@ -330,6 +343,7 @@
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <foreground color="-13611010"/>
                   <text value="Edad en meses"/>
                 </properties>
               </component>
@@ -346,6 +360,7 @@
                   <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <foreground color="-13611010"/>
                   <text value="País"/>
                 </properties>
               </component>
@@ -354,6 +369,7 @@
                   <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <foreground color="-13611010"/>
                   <text value="Color"/>
                 </properties>
               </component>
@@ -362,6 +378,7 @@
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <foreground color="-13611010"/>
                   <text value="Código"/>
                 </properties>
               </component>
@@ -390,6 +407,7 @@
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <foreground color="-13611010"/>
                       <text value="Color de Ojos"/>
                     </properties>
                   </component>
@@ -398,6 +416,7 @@
                       <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <foreground color="-13611010"/>
                       <text value="Sexo"/>
                     </properties>
                   </component>
@@ -406,6 +425,7 @@
                       <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <foreground color="-13611010"/>
                       <text value="Hembra"/>
                     </properties>
                   </component>
@@ -414,6 +434,7 @@
                       <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <foreground color="-13611010"/>
                       <text value="Macho"/>
                     </properties>
                   </component>
@@ -422,6 +443,7 @@
                       <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <foreground color="-13611010"/>
                       <text value="Perdigrí"/>
                     </properties>
                   </component>
@@ -430,6 +452,7 @@
                       <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <foreground color="-13611010"/>
                       <text value="No"/>
                     </properties>
                   </component>
@@ -454,6 +477,7 @@
                       <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <foreground color="-13611010"/>
                       <text value="Dalmata"/>
                     </properties>
                   </component>
@@ -462,6 +486,7 @@
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <foreground color="-13611010"/>
                       <text value="Chow-Chow"/>
                     </properties>
                   </component>
@@ -470,6 +495,7 @@
                       <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <foreground color="-13611010"/>
                       <text value="Bulldog"/>
                     </properties>
                   </component>
@@ -478,6 +504,7 @@
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <foreground color="-13611010"/>
                       <text value="Raza"/>
                     </properties>
                   </component>
@@ -502,6 +529,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <foreground color="-13611010"/>
                   <text value="Nombre"/>
                 </properties>
               </component>
@@ -587,6 +615,7 @@
               <grid row="0" column="8" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-13611010"/>
               <text value="Saldo:"/>
             </properties>
           </component>
@@ -595,6 +624,7 @@
               <grid row="0" column="9" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-13611010"/>
               <text value="0.00 "/>
             </properties>
           </component>
@@ -603,6 +633,7 @@
               <grid row="0" column="10" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-13611010"/>
               <text value="USD"/>
             </properties>
           </component>
@@ -688,6 +719,76 @@
               </component>
             </children>
           </grid>
+        </children>
+      </grid>
+      <grid id="102d6" binding="loginPanel" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-1"/>
+        </properties>
+        <border type="line" title="LOG In" title-justification="4" title-position="2">
+          <font name="Comic Sans MS" size="18" style="3"/>
+          <title-color color="-13611010"/>
+          <color color="-13611010"/>
+        </border>
+        <children>
+          <component id="66887" class="javax.swing.JTextField" binding="userTextField">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
+          </component>
+          <hspacer id="58b84">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
+          <component id="8b361" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-657931"/>
+              <font name="Times New Roman" size="18" style="3"/>
+              <foreground color="-13611010"/>
+              <text value="USER"/>
+            </properties>
+          </component>
+          <component id="9eb86" class="javax.swing.JPasswordField" binding="passwordField">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="714a1" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-328966"/>
+              <font name="Times New Roman" size="18" style="3"/>
+              <foreground color="-13611010"/>
+              <text value="PASSWORD"/>
+            </properties>
+          </component>
+          <component id="2b231" class="javax.swing.JButton" binding="LOGINButton" default-binding="true">
+            <constraints>
+              <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-1"/>
+              <font name="Consolas" size="16" style="1"/>
+              <foreground color="-13611010"/>
+              <text value="LOG IN"/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
